#include "aa/server/video_service_impl.h"

#include <grpcpp/grpcpp.h>
#include <opencv2/opencv.hpp>
#include <iostream>
#include <chrono>

namespace aa::server {

VideoServiceImpl::VideoServiceImpl() {
  // TODO: Initialize video processor and other components
  std::cout << "VideoServiceImpl constructor - Implementation needed\n";
}

grpc::Status VideoServiceImpl::ProcessFrame(grpc::ServerContext* context, const aa::shared::ProcessRequest* request,
                                            aa::shared::ProcessResponse* response) {
  // TODO: Implement frame processing
  // 1. Extract frame data from request
  // 2. Convert to OpenCV Mat
  // 3. Apply requested operation using VideoProcessor
  // 4. Convert result back to protobuf format
  // 5. Set response fields (result, success, processing_time_ms)

  std::cout << "VideoServiceImpl::ProcessFrame() - Implementation needed\n";
  std::cout << "  Operation: " << request->operation() << "\n";
  std::cout << "  Frame size: " << request->frame().data().size() << " bytes\n";

  // Temporary response to avoid compilation errors
  response->set_success(false);
  response->set_error_message("Not implemented");
  response->set_processing_time_ms(0.0);

  return grpc::Status(grpc::StatusCode::UNIMPLEMENTED, "ProcessFrame not implemented");
}

grpc::Status VideoServiceImpl::HealthCheck(grpc::ServerContext* context, const aa::shared::HealthRequest* request,
                                           aa::shared::HealthResponse* response) {
  // TODO: Implement health check
  // 1. Check server status
  // 2. Verify video processor is ready
  // 3. Return appropriate health status

  std::cout << "VideoServiceImpl::HealthCheck() - Implementation needed\n";

  // Temporary response to avoid compilation errors
  response->set_healthy(false);
  response->set_status("Not implemented");

  return grpc::Status(grpc::StatusCode::UNIMPLEMENTED, "HealthCheck not implemented");
}

grpc::Status VideoServiceImpl::StreamProcess(
    grpc::ServerContext* context,
    grpc::ServerReaderWriter<aa::shared::ProcessResponse, aa::shared::ProcessRequest>* stream) {
  // TODO: Implement streaming video processing
  // 1. Set up bidirectional stream handling
  // 2. Read incoming frame requests
  // 3. Process frames in real-time
  // 4. Send back processed results
  // 5. Handle stream lifecycle and errors

  std::cout << "VideoServiceImpl::StreamProcess() - Implementation needed\n";

  return grpc::Status(grpc::StatusCode::UNIMPLEMENTED, "StreamProcess not implemented");
}

}  // namespace aa::server
